# ergmode

./: .eslintrc  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yaml  release.yaml
src/: App.tsx  DataValue.tsx  Duration.tsx  HeartRateDisplay.tsx  TargetComplianceGauge.tsx  WorkoutGraph.tsx  WorkoutMain.tsx  styles.css  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: config.rs  executor.rs  main.rs  workout.rs
src-tauri/tests/fixtures/: power_and_cadence.fit
src/types/: FitnessEquipmentUpdate.ts  HeartRateUpdate.ts  Workout.ts  WorkoutStatus.ts  WorkoutStep.ts
