[package]
name = "ergmode"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
hex = "0.4.3"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
env_logger = "0.10.0"
antrs = { git = "https://github.com/prograhamer/antrs", version = "0.1.0" }
fit_file = { git = "https://github.com/prograhamer/rust_fit_file", version = "0.5.0", branch = "workout-file-support" }
nosleep = "0.2.1"
toml = "0.8.6"
ts-rs = "7.0.0"
url = "2.4.1"
base64 = "0.21.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
